Add initial flow

--- a/src/views/home.njk
+++ b/src/views/home.njk
@@ -1,10 +1,5 @@
 {% extends '_layout.njk' %}
 
 {% block content %}
-  <section class="hero">
-    <div class="hero-body">
-      <p class="title">Hello world!</p>
-      <p class="subtitle">Welcome to {{ appName }}</p>
-    </div>
-  </section>
+  <p>{{auth}}</p>
 {% endblock %}
